# ptlm_wsid

./: .env  .gitignore  AUTHORS  ChangeLog  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
linking/: NE_linker.py  Readme.md  dummy_linker.py  entity_linker.py  utils.py  wikidata_linker.py
ptlm_wsid/: __init__.py  chi.py  chi_example.py  cluster.py  example.cxt  example.py  factors.py  generative_factors.py  hyperBert.py  ler.py  main.py  moabit.py  target_context.py  utils.py  wsid_example.py
scripts/: README.md  chi_example.py  linktsv.py  wic_tsv.py  wikiner.py  wikiner_new_types.py  wikiner_senses.py  wsid_example.py
scripts/configs/: logging.conf  wikiner_de_config.conf  wikiner_de_config_VICTOR.conf  wikiner_de_senses_config.conf  wikiner_de_types_config.conf  wikiner_en_config.conf  wikiner_en_config_VICTOR.conf  wikiner_en_senses_config.conf  wikiner_en_types_config.conf
scripts/evaluation/: broader_analysis.py  evaluation_analysis.py  evaluation_pipeline.py  plotting.py  quantitative_evaluation.py  randomization.py  readers.py  utils.py
utils/: dummy_linker.py  entity_linker.py  wikidata_linker.py
