[metadata]
name = ptlm_wsid
author = Artem Revenko
author-email = artem.revenko@semantic-web.com
summary = Pre-trained Lnag Model for WSID
description-file = README.md
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

# [files]

# [entry_points]