[metadata]
name = ptlm_wsid
author = Artem Revenko
author-email = artreven@gmail.com
summary = Pre-trained Lang Model for WSID
description-file = README.md
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    NLP

# [files]

# [entry_points]